--- a/index.html
+++ b/index.html
@@ -2,223 +2,297 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Ruchitha's Portfolio</title>
-    <style>
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f9f9f9;
-            color: #333;
-        }
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Ruchitha's Portfolio</title>
+  <style>
+    /* Background animation */
+    @keyframes gradientShift {
+      0% {
+        background-position: 0% 50%;
+      }
 
-        header {
-            background-color: #0066cc;
-            color: white;
-            padding: 2rem;
-            text-align: center;
-        }
+      50% {
+        background-position: 100% 50%;
+      }
 
-        header h1 {
-            margin: 0;
-            font-size: 2.5rem;
-            letter-spacing: 2px;
-        }
+      100% {
+        background-position: 0% 50%;
+      }
+    }
 
-        nav {
-            background-color: #004080;
-            display: flex;
-            justify-content: center;
-            padding: 0.75rem 0;
-        }
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      margin: 0;
+      padding: 0;
+      background: linear-gradient(-45deg, #0066cc, #004080, #3399ff, #66b2ff);
+      background-size: 400% 400%;
+      animation: gradientShift 15s ease infinite;
+      color: #333;
+    }
 
-        nav a {
-            color: white;
-            text-decoration: none;
-            margin: 0 1.5rem;
-            font-weight: 600;
-            font-size: 1rem;
-        }
+    header {
+      background-color: rgba(0, 102, 204, 0.85);
+      color: white;
+      padding: 2rem;
+      text-align: center;
+    }
 
-        nav a:hover {
-            text-decoration: underline;
-        }
+    header h1 {
+      margin: 0;
+      font-size: 2.5rem;
+      letter-spacing: 2px;
+    }
 
-        main {
-            max-width: 900px;
-            margin: 2rem auto;
-            padding: 0 1rem;
-        }
+    nav {
+      background-color: rgba(0, 64, 128, 0.85);
+      display: flex;
+      justify-content: center;
+      padding: 0.75rem 0;
+      position: sticky;
+      top: 0;
+      z-index: 100;
+    }
 
-        section {
-            margin-bottom: 3rem;
-        }
+    nav a {
+      color: white;
+      text-decoration: none;
+      margin: 0 1.5rem;
+      font-weight: 600;
+      font-size: 1rem;
+    }
 
-        h2 {
-            border-bottom: 3px solid #0066cc;
-            padding-bottom: 0.3rem;
-            margin-bottom: 1rem;
-            color: #004080;
-        }
+    nav a:hover {
+      text-decoration: underline;
+    }
 
-        ul.skills-list {
-            list-style: none;
-            padding-left: 0;
-            display: flex;
-            flex-wrap: wrap;
-            gap: 0.7rem;
-        }
+    main {
+      max-width: 900px;
+      margin: 2rem auto;
+      padding: 0 1rem;
+      background-color: rgba(255, 255, 255, 0.92);
+      border-radius: 10px;
+      box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+    }
 
-        ul.skills-list li {
-            background-color: #0066cc;
-            color: white;
-            padding: 0.5rem 1rem;
-            border-radius: 20px;
-            font-size: 0.9rem;
-            font-weight: 600;
-        }
+    section {
+      margin-bottom: 3rem;
+    }
 
-        .project {
-            background-color: white;
-            padding: 1rem 1.5rem;
-            border-radius: 8px;
-            margin-bottom: 1.5rem;
-            box-shadow: 0 1px 6px rgba(0, 0, 0, 0.1);
-        }
+    h2 {
+      border-bottom: 3px solid #0066cc;
+      padding-bottom: 0.3rem;
+      margin-bottom: 1rem;
+      color: #004080;
+    }
 
-        .project h3 {
-            margin-top: 0;
-            color: #004080;
-        }
+    ul.skills-list {
+      list-style: none;
+      padding-left: 0;
+      display: flex;
+      flex-wrap: wrap;
+      gap: 0.7rem;
+    }
 
-        .project p {
-            margin: 0.4rem 0 0;
-            line-height: 1.4;
-        }
+    ul.skills-list li {
+      background-color: #0066cc;
+      color: white;
+      padding: 0.5rem 1rem;
+      border-radius: 20px;
+      font-size: 0.9rem;
+      font-weight: 600;
+    }
 
-        footer {
-            text-align: center;
-            padding: 1.5rem 1rem;
-            background-color: #0066cc;
-            color: white;
-            font-size: 0.9rem;
-        }
+    .project {
+      background-color: white;
+      padding: 1rem 1.5rem;
+      border-radius: 8px;
+      margin-bottom: 1.5rem;
+      box-shadow: 0 1px 6px rgba(0, 0, 0, 0.1);
+    }
 
-        footer a {
-            color: #ffec99;
-            text-decoration: none;
-            font-weight: 600;
-        }
+    .project h3 {
+      margin-top: 0;
+      color: #004080;
+    }
 
-        footer a:hover {
-            text-decoration: underline;
-        }
+    .project p {
+      margin: 0.4rem 0 0;
+      line-height: 1.4;
+    }
 
-        @media (max-width: 600px) {
-            ul.skills-list {
-                flex-direction: column;
-                gap: 0.4rem;
-            }
-        }
-    </style>
+    .edu-exp {
+      background-color: white;
+      padding: 1rem 1.5rem;
+      border-radius: 8px;
+      margin-bottom: 1.5rem;
+      box-shadow: 0 1px 6px rgba(0, 0, 0, 0.1);
+    }
+
+    .edu-exp h3 {
+      margin-top: 0;
+      color: #004080;
+    }
+
+    .edu-exp p,
+    .edu-exp span {
+      margin: 0.2rem 0;
+      display: block;
+      font-size: 0.95rem;
+      color: #333;
+    }
+
+    footer {
+      text-align: center;
+      padding: 1.5rem 1rem;
+      background-color: rgba(0, 102, 204, 0.85);
+      color: white;
+      font-size: 0.9rem;
+      margin-top: 2rem;
+      border-radius: 0 0 10px 10px;
+    }
+
+    footer a {
+      color: #ffec99;
+      text-decoration: none;
+      font-weight: 600;
+    }
+
+    footer a:hover {
+      text-decoration: underline;
+    }
+
+    @media (max-width: 600px) {
+      ul.skills-list {
+        flex-direction: column;
+        gap: 0.4rem;
+      }
+    }
+  </style>
 </head>
 
 <body>
-    <header>
-        <h1>Ruchitha</h1>
-        <p>DevOps Engineer | AWS | Terraform | CI/CD | Automation</p>
-    </header>
+  <header>
+    <h1>Ruchitha</h1>
+    <p>DevOps Engineer | AWS | Terraform | CI/CD | Automation</p>
+  </header>
 
-    <nav>
-        <a href="#about">About Me</a>
-        <a href="#skills">Skills</a>
-        <a href="#projects">Projects</a>
-        <a href="#contact">Contact</a>
-    </nav>
+  <nav>
+    <a href="#about">About Me</a>
+    <a href="#skills">Skills</a>
+    <a href="#projects">Projects</a>
+    <a href="#education">Education</a>
+    <a href="#experience">Experience</a>
+    <a href="#contact">Contact</a>
+  </nav>
 
-    <main>
-        <section id="about">
-            <h2>About Me</h2>
-            <p>
-                DevOps Engineer passionate about automating infrastructure and streamlining deployment workflows.
-                Experienced in AWS, Terraform, Jenkins, Ansible, Docker, and Linux system administration. Skilled in
-                building scalable, secure, and cost-effective cloud environments with a strong focus on Infrastructure as
-                Code and CI/CD pipelines. Actively seeking opportunities in India to contribute and grow in dynamic tech
-                teams.
-            </p>
-        </section>
+  <main>
+    <section id="about">
+      <h2>About Me</h2>
+      <p>
+        DevOps Engineer passionate about automating infrastructure and streamlining deployment workflows.
+        Experienced in AWS, Terraform, Jenkins, Ansible, Docker, and Linux system administration. Skilled in
+        building scalable, secure, and cost-effective cloud environments with a strong focus on Infrastructure as
+        Code and CI/CD pipelines. Actively seeking opportunities in India to contribute and grow in dynamic tech
+        teams.
+      </p>
+    </section>
 
-        <section id="skills">
-            <h2>Skills</h2>
-            <ul class="skills-list">
-                <li>AWS (EC2, S3, IAM, CloudFormation)</li>
-                <li>Terraform</li>
-                <li>Ansible</li>
-                <li>Jenkins</li>
-                <li>GitLab CI/CD</li>
-                <li>Docker</li>
-                <li>Kubernetes (basic)</li>
-                <li>Bash Scripting</li>
-                <li>Python</li>
-                <li>Prometheus</li>
-                <li>Grafana</li>
-                <li>ELK Stack</li>
-                <li>Git & GitHub</li>
-                <li>Linux (CentOS, Ubuntu)</li>
-            </ul>
-        </section>
+    <section id="skills">
+      <h2>Skills</h2>
+      <ul class="skills-list">
+        <li>AWS (EC2, S3, IAM, CloudFormation)</li>
+        <li>Terraform</li>
+        <li>Ansible</li>
+        <li>Jenkins</li>
+        <li>GitLab CI/CD</li>
+        <li>Docker</li>
+        <li>Kubernetes (basic)</li>
+        <li>Bash Scripting</li>
+        <li>Python</li>
+        <li>Prometheus</li>
+        <li>Grafana</li>
+        <li>ELK Stack</li>
+        <li>Git & GitHub</li>
+        <li>Linux (CentOS, Ubuntu)</li>
+      </ul>
+    </section>
 
-        <section id="projects">
-            <h2>Projects</h2>
+    <section id="projects">
+      <h2>Projects</h2>
 
-            <div class="project">
-                <h3>AWS Infrastructure Automation</h3>
-                <p>
-                    Automated provisioning and management of AWS resources using Terraform and Ansible, reducing manual
-                    configuration time by 50%. Implemented secure IAM policies and automated backups using AWS Lambda
-                    functions.
-                </p>
-            </div>
+      <div class="project">
+        <h3>AWS Infrastructure Automation</h3>
+        <p>
+          Automated provisioning and management of AWS resources using Terraform and Ansible, reducing manual
+          configuration time by 50%. Implemented secure IAM policies and automated backups using AWS Lambda
+          functions.
+        </p>
+      </div>
 
-            <div class="project">
-                <h3>CI/CD Pipeline Setup with Jenkins</h3>
-                <p>
-                    Designed and implemented automated build and deployment pipelines using Jenkins for containerized
-                    microservices, improving deployment speed and reliability.
-                </p>
-            </div>
+      <div class="project">
+        <h3>CI/CD Pipeline Setup with Jenkins</h3>
+        <p>
+          Designed and implemented automated build and deployment pipelines using Jenkins for containerized
+          microservices, improving deployment speed and reliability.
+        </p>
+      </div>
 
-            <div class="project">
-                <h3>Docker-Based Application Deployment</h3>
-                <p>
-                    Containerized legacy applications using Docker, simplifying deployment and scaling processes on cloud
-                    environments.
-                </p>
-            </div>
+      <div class="project">
+        <h3>Docker-Based Application Deployment</h3>
+        <p>
+          Containerized legacy applications using Docker, simplifying deployment and scaling processes on cloud
+          environments.
+        </p>
+      </div>
 
-            <div class="project">
-                <h3>Linux System Monitoring Tool</h3>
-                <p>
-                    Developed a Bash script-based system resource monitor that tracks CPU, memory, disk, and network usage,
-                    integrated with alert notifications.
-                </p>
-            </div>
-        </section>
+      <div class="project">
+        <h3>Linux System Monitoring Tool</h3>
+        <p>
+          Developed a Bash script-based system resource monitor that tracks CPU, memory, disk, and network usage,
+          integrated with alert notifications.
+        </p>
+      </div>
+    </section>
 
-        <section id="contact">
-            <h2>Contact Me</h2>
-            <p>Email: <a href="mailto:ruchithakatakam99@gmail.com">ruchithakatakam99@gmail.com</a></p>
-            <p>Phone: +91-8340894285</p>
-            <p>LinkedIn: <a href="https://www.linkedin.com/in/ruchitha-r-423409274/" target="_blank" rel="noopener">linkedin.com/in/ruchitha-r-423409274</a></p>
-            <p>GitHub: <a href="https://github.com/ruchitha829" target="_blank" rel="noopener">github.com/ruchitha829</a></p>
-        </section>
-    </main>
+    <section id="education">
+      <h2>Education</h2>
 
-    <footer>
-        <p>© 2025 Ruchitha | Designed for DevOps & Cloud Career Growth</p>
-    </footer>
-</body>
+      <div class="edu-exp">
+        <h3>Bachelor of Technology in Electrical Engineering</h3>
+        <span>XYZ University, India</span>
+        <span>2017 - 2021</span>
+      </div>
 
-</html>
+      <div class="edu-exp">
+        <h3>Diploma in Linux Administration</h3>
+        <span>ABC Institute</span>
+        <span>2023</span>
+      </div>
+    </section>
+
+    <section id="experience">
+      <h2>Experience</h2>
+
+      <div class="edu-exp">
+        <h3>Associate Cloud Engineer - Onpassiv</h3>
+        <span>July 2023 - March 2025</span>
+        <p>Managed cloud infrastructure and automation scripts, ensuring smooth deployment and monitoring processes.</p>
+      </div>
+
+      <div class="edu-exp">
+        <h3>Internships & Projects</h3>
+        <p>Worked on various DevOps and automation projects during training and internships, including CI/CD pipeline setups and cloud resource management.</p>
+      </div>
+    </section>
+
+    <section id="contact">
+      <h2>Contact Me</h2>
+      <p>Email: <a href="mailto:ruchithakatakam99@gmail.com">ruchithakatakam99@gmail.com</a></p>
+      <p>Phone: +91-8340894285</p>
+      <p>LinkedIn: <a href="https://www.linkedin.com/in/ruchitha-r-423409274/" target="_blank" rel="noopener">linkedin.com/in/ruchitha-r-423409274</a></p>
+      <p>GitHub: <a href="https://github.com/ruchitha829" target="_blank" rel="noopener">github.com/ruchitha829</a></p>
+    </section>
+  </main>
+
+  <
